--- a/styles.css/styles.css
+++ b/styles.css/styles.css
@@ -95,12 +95,7 @@ a{
 a:hover{
     color:#cf828f;
 }
-.container{
-    max-width:80%;
-    padding: 20px;
-    margin:0 auto;
-    background-color: #f2e8d6;
-}
+
 .active{
     color:#cf828f;
     text-decoration: underline;
@@ -108,69 +103,672 @@ a:hover{
 #logo-blue-box{
     width: 130px;
 }
+#contact-info li{
+    list-style: none;
+}
+input[type=text], select {
+    width: 100%;
+    max-width: 320px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #F2E8D6;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+textarea{
+    width: 100%;
+    max-width: 320px;
+    padding-left: 20px;
+    margin: 8px 0;
+    color: #2c4a56;
+    display: inline-block;
+    border: 1px solid #F2E8D6;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+input[type=submit]{
+    font-family: "dm sans";
+    background-color: #F2E8D6;
+    color: #2c4a56;
+    padding: 12px 14px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+input[type=submit]:hover {
+    background-color: #cf828f;
+    color:#F2E8D6;
+}
 
 /*****************************
             MOBILE
 *****************************/
-@media screen and (max-width: 480px){
+@media screen and (max-width: 480px){ 
+/********* home and mobile defaults *********/
+.container{
+    max-width:100%;
+    margin:0 auto;
+    }
 #nav{
-     display: flex;
-     flex-direction:row;
-     align-items: center;
-     justify-content: space-between;
-     padding-bottom: 20px;
+    display: flex;
+    flex-direction:row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px;
     } 
+#nav2{
+    display:flex;
+    flex-grow: 1;
+    flex-direction:column;
+    align-items: flex-end;
+    }
+ #logo-blue-box{
+    width: 130px;
+    } 
+.front-img{
+    display: none;
+    }
+#main-text{
+    padding:10px 20px;
+}
+#text{
+    padding: 20px;
+}
+.img{
+    width:100%;
+    }
+.portfolio-grid{
+    margin: 0 auto;
+    padding: 30px 20px 10px;
+    } 
+.grid-container{
+    max-height: 500px;
+    overflow: scroll;
+    }
+.grid-item{
+    padding:6px 0;
+    }
+.social-icons{
+    max-width: 55px;
+    }
+#soc{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 10px 0 30px 0;
+    }
+footer{
+    font-size: small;
+    padding: 20px;
+    }
+#footer-links{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+    }  
+#bottom-links{
+    text-align: end;
+    font-size: smaller;
+    padding:16px 20px;
+    }
+.hidden{
+    display: none;
+    }
+/**************** info *******************/
+.img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    }
+#about-text{
+    padding:0 20px;
+    }
+.info-grid{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    padding: 30px 0;
+    }
+li{
+    line-height: 26px;
+    padding:2px;
+    }
+ul{ 
+    list-style-type: "✷"; 
+    list-style-position: inside;
+    }
+#info-img{
+    display: none;
+    }
+#about{
+    display: flex;
+    flex-direction: column-reverse;
+    }
+#me-img{
+    width: 100%;
+    padding-top:20px;
+    margin:0;
+    height:230px;
+    object-fit: cover;
+    object-position: 2% 2%;
+    }
+#contact-form{
+    background-color:#f0d3cb;
+    padding: 40px;
+    }
+#contact-info{
+    padding:0 10px 20px 0
+    }
+label{
+    display:none;
+    }
+#bottom-link{
+    text-align: end;
+}
+/********  work  **********/
+.portfolio-grid2{
+    margin: 0 auto;
+    padding: 30px 20px 10px;
+    } 
+.grid-container2{
+    max-height: 500px;
+    overflow: scroll;
+    }
+.grid-item2{
+    padding:6px 0;
+    }
+
+}
+
+/*****************************
+        tablet
+*****************************/
+@media screen and (min-width: 481px) and (max-width: 768px){
+.container{
+    max-width:80%;
+    margin:0 auto;
+    }
+#nav{
+    padding-top:30px;   
+    display: flex;
+    flex-direction:row;
+    align-items: center;
+    justify-content: space-between;
+    } 
+#nav2{
+    display:flex;
+    flex-grow: 1;
+    flex-direction:column;
+    align-items: flex-end;
+    }
+ #logo-blue-box{
+    width: 130px;
+    } 
+.front-img{
+    width:100%;
+    padding: 20px 0;
+    }
+#main-text{
+    padding-bottom:30px;
+    }
+.img{
+    width:100%;
+    }
+.social-icons{
+    max-width: 55px;
+    }
+#soc{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding:30px;
+    }
+footer{
+    font-size: small;
+    padding: 20px 0;
+    }
+ #footer-links{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+    }  
+#bottom-links{
+    text-align: end;
+    font-size: smaller;
+    padding:16px 0;
+    display:flex;
+    justify-content: space-between;
+    }
+.grid-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 30vh);
+    gap:20px;
+}
+.grid-item{
+    object-fit: cover;
+    max-width: 100%;
+    max-height: 100%;
+}
+/************* info *************/
+.img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    }
+#about-text{
+    padding:20px 0px;
+    }
+.info-grid{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px 0 34px 0; 
+    }
+li{
+    line-height: 26px;
+    padding:2px;
+    }
+ul{ 
+    list-style-type: "✷"; 
+    list-style-position: inside;
+    }
+
+#me-img{
+        width: 100%;
+        padding-top:20px;
+        margin:0;
+        height:300px;
+        object-fit: cover;
+        object-position: 2% 2%;
+    }
+#contact-form{
+    background-color:#f0d3cb;
+    padding:34px 0;
+    }
+#contact-info{
+    padding:0 10px 20px 0;
+    }
+label{
+    display:none;
+    }
+#bottom-link{
+    text-align: end;
+}
+#contact-form{
+    display:flex;
+    flex-direction: row;
+    padding: 30px;
+    justify-content: space-between;
+}
+#about-text{
+    max-width:500px;
+}
+/********* work ************/
+.portfolio-grid2{
+        padding-top: 30px;
+}
+.grid-container2{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 30vh);
+    gap:20px;
+}
+.grid-item2{
+    object-fit: cover;
+    max-width: 100%;
+    max-height: 100%;
+}
+}
+
+@media screen and (max-width: 849px){
+    #form-img{
+      display:none;
+}
+}
+@media screen and (min-width: 850px){
+    #form-img{
+        width: 20vw;
+        object-fit: cover;
+        padding: 0 10px;
+}
+}
+@media screen and (max-width: 559px){
+    .info-grid{
+    padding-left: 30px;
+}
+}
+@media screen and (max-width: 559px){
+    #info-img{
+    display: none;
+}    
+}
+@media screen and (min-width: 560px){
+    #info-img{
+    width:22vw;
+}    
+}
+/*****************************
+        small desktop
+*****************************/
+@media screen and (min-width: 769px) and (max-width: 1024px){
+.container{
+    max-width:80%;
+    padding: 20px;
+    margin:0 auto;
+    }
+    .container{
+        max-width:80%;
+        margin:0 auto;
+        }
+    #nav{
+        padding-top:30px;   
+        display: flex;
+        flex-direction:row;
+        align-items: center;
+        justify-content: space-between;
+        } 
     #nav2{
         display:flex;
         flex-grow: 1;
         flex-direction:column;
         align-items: flex-end;
         }
+    #logo-blue-box{
+        width: 130px;
+        } 
+    .front-img{
+        width:100%;
+        padding: 20px 0;
+        }
+    #main-text{
+        padding-bottom:30px;
+        }
+    .img{
+        width:100%;
+        }
+    .social-icons{
+        max-width: 44px;
+        padding: 10px;
+        }
+    #soc{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        padding: 30px;
+        margin-bottom: -100px;
+        }
+    footer{
+        font-size: small;
+        padding: 20px 0;
+        }
+    #footer-links{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: start;
+        }  
+    #bottom-links{
+        text-align: end;
+        font-size: smaller;
+        padding:16px 0;
+        display:flex;
+        justify-content: space-between;
+        }
+    .grid-container{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 40vh);
+        gap:20px;
+    }
+    .grid-item{
+        object-fit: cover;
+        max-width: 100%;
+        max-height: 100%;
+    }
+    /************* info *************/
+    .img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        }
+    #about-text{
+        padding:10px 0px;
+        max-width: 700px;
+        }
+    .info-grid{
+        display:flex;
+        flex-direction: row;
+        justify-content: space-between;
+        padding: 16px 0 34px 0; 
+        }
+    li{
+        line-height:26px;
+        padding:2px;
+        }
+    ul{ 
+        list-style-type: "✷"; 
+        list-style-position: inside;
+        }
+   
+    #me-img{
+        width: 100%;
+        padding-top:20px;
+        margin:0;
+        height:300px;
+        object-fit: cover;
+        object-position: 2% 2%;
+        }
+    #contact-form{
+        background-color:#f0d3cb;
+        padding:34px 0;
+        }
+    #contact-info{
+        padding:0 10px 20px 0;
+        }
+    label{
+        display:none;
+        }
+    #bottom-links{
+        padding-top: 26px;
+    }
+    #contact-form{
+        display:flex;
+        flex-direction: row;
+        padding: 30px;
+        justify-content: space-between;
+    }    
+    /*********** work *********/
+    .portfolio-grid2{
+        padding-top: 30px;
+    }
+    .grid-container2{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, 40vh);
+        gap:20px;
+    }
+    .grid-item2{
+        object-fit: cover;
+        max-width: 100%;
+        max-height: 100%;
+    }
+}
+
+/*****************************
+        large desktop
+*****************************/
+@media screen and (min-width: 1025px){
+.container{
+    max-width:80%;
+    padding: 20px;
+    margin:0 auto;
+    }
+.container{
+    max-width:80%;
+    margin:0 auto;
+    }
+#nav{
+    padding-top:30px;   
+    display: flex;
+    flex-direction:column;
+    align-items: flex-end;
+    } 
+#nav2{
+    display:flex;
+    flex-grow: 1;
+    flex-direction:column;
+    align-items: flex-end;
+    }
  #logo-blue-box{
-     width: 130px;
+    width: 130px;
     } 
 .front-img{
-    display: none;
+    width:60vw;
+    max-width: 1000px;
+    margin-top:-232px;
+    }
+#main{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding-bottom: 40px;
+    }
+#main-text{
+    padding:10px 0 0 30px;
+    min-width: 100px;
+    max-width: 400px;
     }
 .img{
     width:100%;
-}
-.portfolio-grid{
-    margin: 0 auto;
-    padding: 30px 0 10px;
-}
-.grid-container{
-    max-height: 500px;
-    overflow: scroll;
-}
-.grid-item{
-    padding:6px 0;
-}
+    }
 .social-icons{
-    max-width: 55px;
-}
+    max-width: 44px;
+    padding:10px;
+    }
 #soc{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 10px 0 30px 0;
-}
+    justify-content: center;
+    padding: 10px;
+    margin-bottom: -100px;
+    }
 footer{
     font-size: small;
-}
+    padding: 40px 0 20px 0;
+    }
  #footer-links{
-display: flex;
-flex-direction: column;
-align-items: flex-start;
-justify-content: baseline;
-}
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+    }  
 #bottom-links{
     text-align: end;
     font-size: smaller;
-    padding:16px 0;
+    padding:26px 0;
+    display:flex;
+    justify-content: space-between;
+    }
+.grid-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 50vh);
+    gap:30px;
+    padding:20px 0;
+    }
+.grid-item{
+    object-fit: cover;
+    max-width: 100%;
+    max-height: 100%;
+    }
+/************* info *************/
+.img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    }
+.info-grid{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 16px 0 34px 0; 
+    }
+#info-img{
+    width: 20vw;
+    max-width: 360px;
 }
-.hidden{
-    display: none;
+li{
+    line-height: 26px;
+    padding:2px;
+    }
+ul{ 
+    list-style-type: "✷"; 
+    list-style-position: inside;
+    }
+#form-img{
+    width: 20vw;
+    object-fit: cover;
+    padding: 0 10px;
+    }
+#me-img{
+    padding-top:20px;
+    width:60vw;
+    max-width: 1000px;
+    margin-top:-232px;
+    }
+#about{
+    display:flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: space-between;
+    padding-bottom: 40px;
+    }
+#about-text{
+    padding:10px 0 0 30px;
+    min-width: 100px;
+    max-width: 340px;
+    }
+#contact-form{
+    background-color:#f0d3cb;
+    padding:34px 0;
+    }
+#contact-info{
+    padding:0 10px 20px 0;
+    }
+label{
+    display:none;
+    }
+#bottom-link{
+    text-align: end;
+    }
+#contact-form{
+    display:flex;
+    flex-direction: row;
+    padding: 30px;
+    justify-content: space-between;
+    }    
+.grid-container2{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 50vh);
+    gap:30px;
+    padding:20px 0;
+    }
+.grid-item2{
+    object-fit: cover;
+    max-width: 100%;
+    max-height: 100%;
+    }
+.grid-item2:hover{
+    background-color: aqua;
 }
 }
 
